--- a/src/intro.tex
+++ b/src/intro.tex
@@ -1,7 +1,7 @@
 \chapter*{Introduction}
-Le domaine des systèmes répartis est vaste, et étudié depuis plusieurs décennies. Ce travail présente le cas d'une intersection entre ce domaine et l'informatique musicale, ou plus généralement la scénarisation interactive d'évènements. 
+\lettrine[lines=2]{L}{e} domaine des systèmes répartis est vaste, et étudié depuis plusieurs décennies. Ce travail présente le cas d'une intersection entre ce domaine et l'informatique musicale, ou plus généralement la scénarisation interactive d'évènements. 
 
-Ce stage s'est déroulé dans le cadre du projet \brand{ANR} \ac{OSSIA}, en cours depuis 2012. C'est un projet mêlant arts, science, et développement logiciel, qui vise à concevoir et implémenter un cadre formel pour les scénarios interactifs, à l'attention des régies de spectacles, des compositeurs, ou encore dans un cadre muséographique. 
+Ce stage s'est déroulé dans le cadre du projet \brand{ANR} \ac{OSSIA}, en cours depuis 2012. Ce projet mêle arts, science, et développement logiciel, et vise à concevoir et implémenter un cadre formel pour les scénarios interactifs, à l'attention des régies de spectacles, des compositeurs, ou encore dans un cadre muséographique. 
 
 Il y a donc deux étapes non entièrement disjointes qui sont étudiées dans le projet \ac{OSSIA} : la composition , et l'exécution.
 Un des modèles utilisé pour représenter ces scénarios est celui des réseaux de Petri, cependant, d'autres approches, comme par exemple une formalisation à base de \gls{reactiveml} sont étudiées en parallèle. 
