--- a/src/rapport.tex
+++ b/src/rapport.tex
@@ -1,13 +1,15 @@
 \RequirePackage[l2tabu, orthodox]{nag}
-\documentclass[a4paper,11pt,oneside,french,english]{report}
+\documentclass[a4paper,11pt,oneside,english,french]{report}
 
+\usepackage{lettrine}
 \usepackage{hhline}
 \usepackage{setspace}
-\usepackage[tmargin=1.5cm,bmargin=1.5cm,lmargin=1cm,rmargin=1cm]{geometry}
+\usepackage[tmargin=1.5cm,bmargin=1.5cm,lmargin=2.5cm,rmargin=2.5cm]{geometry}
 \usepackage{fixltx2e}
 \usepackage{booktabs}
 \usepackage[utf8]{inputenc}
-\usepackage[french,english]{babel}
+\usepackage{xspace}
+\usepackage[english,french]{babel}
 \usepackage{caption}
 \usepackage[T1]{fontenc}
 \usepackage{relsize}
@@ -25,7 +27,7 @@
 \usepackage{float}
 \usepackage{caption}
 \usepackage{subcaption}
-\usepackage{algorithm2e}
+\usepackage[french,algoruled,figure]{algorithm2e}
 \usepackage[footnote,smaller]{acronym}
 \usepackage[perpage]{footmisc}
 \usepackage[]{titlesec}
