--- a/src/debut.tex
+++ b/src/debut.tex
@@ -3,7 +3,7 @@
   \begin{center}
 
 	\begin{spacing}{1.7}
-    \textsc{\Huge Rapport de stage ~ \\ distribution des réseaux de Petri dans le cadre du logiciel i-score}\\[1cm]
+    \textsc{\Huge Rapport de stage ~ \\ Répartition des réseaux de Petri dans le cadre du logiciel i-score}\\[1cm]
     \textsc{\huge Travail réalisé dans le cadre du Master Recherche de l'Université de Bordeaux}\\[1cm]
     \end{spacing}
     \textsc{\Large Version de travail}
